[tool.poetry]
name = "ws-streamlimit"
version = "0.1.0"
description = ""
authors = ["Magno Barone <magnobarone@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
